# htx

./: LICENSE.txt  README.md  htx.lua  pyproject.toml
htx/: __init__.py  __main__.py  serve.py  templating.py
htx/apps/: reverse.py
htx/apps/reverse/: __init__.py  error.html
htx/apps/serve/: __init__.py  listing.html
htx/apps/serve/templates/: listing.html
htx/host/: __init__.py  templates.py  useragent.py
htx/reverse/: __init__.py
htx/routing/: __init__.py
htx/templates/: __init__.py  error.html
